Alineado de texto de las cards correctamente por align-content de grid

--- a/public/frontend/styles.css
+++ b/public/frontend/styles.css
@@ -18,7 +18,7 @@
 
 .card {
     display: grid;
-    place-items: center;
+    align-content: center;
     width: 100%;
     height: 200px;
     padding: 8px;
